modifying subpage content

--- a/baaaad.html
+++ b/baaaad.html
@@ -16,63 +16,62 @@
         <h1 class="baaaad-h1">Books as Art,<br>Art as Data</h1>
     </header>
     <div class="subpage-content">
-      <div class="subpage-section" id="nav-block">
-        <nav class="portfolio-nav">
-          <div class="rethink-sans-bodyfont">
-            <ul class="nav-list">
-              <li><a id="nav-home" href="index.html">Home</a></li>
-              <li><a href="portfolio.html">Portfolio</a></li>
-              <li><a href="resume.html">Resume</a></li>
-            </ul>
-          </div>  
-        </nav>
-      </div>
-      <div class ="subpage-section">
-        <div class="access-project-section">
-          <div class="access-project-head">
-            <h2 class="rethink-sans-subhead">Access this Project:</h2>
-          </div>
-          <div class="access-project-links rethink-sans-bodyfont">
-            <p><a href="https://studentwork.prattsi.org/bookarts/">Project link</a></p>
-        
-            <a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">See the Project</a>
-          </div>  
+        <div class="subpage-section" id="nav-block">
+          <nav class="portfolio-nav">
+            <div class="rethink-sans-bodyfont">
+              <ul class="nav-list">
+                <li><a id="nav-home" href="index.html">Home</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="resume.html">Resume</a></li>
+              </ul>
+            </div>  
+          </nav>
         </div>
-      </div>
-      <div class="subpage-section">
-       <div class="portfolio-page-content">
-          <div class="portfolio-page-box">
-           <div class="portfolio-page-embed">
-              <object data="Lorum Ipsum Test PDF.pdf#page=1" type="application/pdf" width="100%" height="100%">
-                <iframe src="Lorum Ipsum Test PDF.pdf#page=1" width="100%" height="100%" style="border: none;">
-                 This browser does not support PDFs. Please download the PDF to view it: 
-                <a href="Lorum Ipsum Test PDF.pdf">Download PDF</a>
-                 </iframe>
-              </object>
+        <div class="subpage-section">
+         <div class="portfolio-page-content">
+            <div class="portfolio-page-box">
+             <div class="portfolio-page-embed">
+                <object data="Lorum Ipsum Test PDF.pdf#page=1" type="application/pdf" width="100%" height="100%">
+                  <iframe src="Lorum Ipsum Test PDF.pdf#page=1" width="100%" height="100%" style="border: none;">
+                   This browser does not support PDFs. Please download the PDF to view it: 
+                  <a href="Lorum Ipsum Test PDF.pdf">Download PDF</a>
+                   </iframe>
+                </object>
+              </div>
             </div>
-          </div>
-          <div class="portfolio-page-box">
-            <!-- Should I make this a table? Or should I do headers and then content? Or an accordion?? -->
-            <button class="accordion">Project Description</button>
-            <div class="panel">
+            <div class="portfolio-page-box">
+              <!-- Should I make this a table? Or should I do headers and then content? Or an accordion?? -->
+              <button class="accordion">Project Description</button>
+              <div class="panel">
                 <p>Lorem Ipsum...</p>
-            </div>
-            <button class="accordion">Methods</button>
-            <div class="panel">
-              <p>Lorem Ipsum...</p>
-            </div>
-            <button class="accordion">My Role</button>
-            <div class="panel">
-              <p>Lorem Ipsum...</p>
-            </div>
-            <button class="accordion">Skills Highlighted</button>
-            <div class="panel">
-              <p>Lorem Ipsum...</p>
+              </div>
+              <button class="accordion">Methods</button>
+              <div class="panel">
+                <p>Lorem Ipsum...</p>
+              </div>
+              <button class="accordion">My Role</button>
+              <div class="panel">
+                <p>Lorem Ipsum...</p>
+              </div>
+              <button class="accordion">Skills Highlighted</button>
+              <div class="panel">
+                <p>Lorem Ipsum...</p>
+              </div>
             </div>
           </div>
         </div>
+        <div class ="subpage-section">
+          <div class="access-project-section">
+            <div class="access-project-head">
+              <h2 class="rethink-sans-subhead">Access this Project:</h2>
+            </div>
+            <div class="access-project-links rethink-sans-bodyfont">
+              <p><a>Project link</a></p>
+              <a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">See the Project</a>
+            </div>  
+          </div>
+        </div>
       </div>
-    </div>
     <footer>
       <p class="attribution">© Madeleine Casey 2025.  All graphics created by Madeleine Casey.</p>
     </footer>
