--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
   <div>
     <div class="portfolio-heading">
       <a href="lib-diversity.html" class="portfolio-link">
-      <h2>Exploring Demographic Homogeneity in Librarianship</h2>
+      <h2>Representation in Librarianship</h2>
       </a>
     </div>
     <a href="lib-diversity.html"><img class="project-thumbnail" src="lib-diversity-thumb.svg" alt=""></a>
