--- a/libguide.html
+++ b/libguide.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Cantora+One&family=Galindo&family=Gorditas:wght@400;700&family=Rethink+Sans:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
-    <script src="scripts.js"></script>
+    <!-- <script src="scripts.js"></script> -->
   </head>
 <body>
     <header class="sub-portfolio-head-background" id="libguide-head-background">
@@ -22,27 +22,10 @@
             <ul class="nav-list">
               <li><a id="nav-home" href="index.html">Home</a></li>
               <li><a href="portfolio.html">Portfolio</a></li>
-                <!-- <ul>
-                  <li>Books as Art, Art as Data</li>
-                  <li>Python Metadata Validator</li>
-                  <li>Exploring Demographic Homogeneity in Librarianship</li>
-                  <li>This Book is Challeng(ing/ed)</li>
-                </ul> -->
               <li><a href="resume.html">Resume</a></li>
             </ul>
           </div>  
         </nav>
-      </div>
-      <div class ="subpage-section">
-        <div class="access-project-section">
-          <div class="access-project-head">
-            <h2 class="rethink-sans-subhead">Access this Project:</h2>
-          </div>
-          <div class="access-project-links rethink-sans-bodyfont">
-            <p><a>Project link</a></p>
-            <a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">See the Project</a>
-          </div>  
-        </div>
       </div>
       <div class="subpage-section">
        <div class="portfolio-page-content">
@@ -77,7 +60,19 @@
           </div>
         </div>
       </div>
+      <div class ="subpage-section">
+        <div class="access-project-section">
+          <div class="access-project-head">
+            <h2 class="rethink-sans-subhead">Access this Project:</h2>
+          </div>
+          <div class="access-project-links rethink-sans-bodyfont">
+            <p><a>Project link</a></p>
+            <a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">See the Project</a>
+          </div>  
+        </div>
+      </div>
     </div>
+
     <footer>
       <p class="attribution">© Madeleine Casey 2025.  All graphics created by Madeleine Casey.</p>
     </footer>
@@ -97,5 +92,4 @@
       });
   }
 </script>
-
 </body>
