--- a/libguide.html
+++ b/libguide.html
@@ -31,8 +31,8 @@
        <div class="portfolio-page-content">
           <div class="portfolio-page-box">
            <div class="portfolio-page-embed">
-              <object data="Lorum Ipsum Test PDF.pdf#page=1" type="application/pdf" width="100%" height="100%">
-                <iframe src="Lorum Ipsum Test PDF.pdf#page=1" width="100%" height="100%" style="border: none;">
+              <object data="https://prattlis.libguides.com/c.php?g=1379726&p=10201673" width="100%" height="500">
+                <iframe src="https://prattlis.libguides.com/c.php?g=1379726&p=10201673" width="100%" height="100%" style="border: none;">
                  This browser does not support PDFs. Please download the PDF to view it: 
                 <a href="Lorum Ipsum Test PDF.pdf">Download PDF</a>
                  </iframe>
@@ -42,20 +42,20 @@
           <div class="portfolio-page-box">
             <!-- Should I make this a table? Or should I do headers and then content? Or an accordion?? -->
             <button class="accordion">Project Description</button>
-            <div class="panel">
-              <p>Lorem Ipsum...</p>
+            <div class="panel rethink-sans-bodyfont">
+              <p>A guide for college aged students interested in incorporating analyses of speculative fiction into their academic work. The LibGuide includes examples of primary sources and relevant academic theory, in addition to a collection of databases and journals students may explore in their research. The guide also includes two informational videos.</p>
             </div>
             <button class="accordion">Methods</button>
-            <div class="panel">
-              <p>Lorem Ipsum...</p>
+            <div class="panel rethink-sans-bodyfont">
+              <p>For this project, alongside a team of peers, I reviewed existing libguides to determine an effective scope, user community and layout for our selected topic. The highlighted sources included in the guide were identified using Pratt’s library catalog, Google, and our prior experience with the topic.  To build the guide we used SpringShare’s LibGuides, which was modified with CSS.  Finally, we used Loom to make the videos featured on the guide.  </p>
             </div>
             <button class="accordion">My Role</button>
-            <div class="panel">
-              <p>Lorem Ipsum...</p>
+            <div class="panel rethink-sans-bodyfont">
+              <p>For my contributions to this group project, I contributed sources to the primary source section we used for the guide, and participated in brainstorming for the guide’s design and structure.  I wrote and recorded the video “How do I find scholarly content about queer speculative fiction?”, and made slides to use as visuals for both videos featured on the guide. I also drew all of the clip art featured in the guide using Adobe Illustrator, and worked on customizing the appearance of the guide.</p>
             </div>
             <button class="accordion">Skills Highlighted</button>
-            <div class="panel">
-              <p>Lorem Ipsum...</p>
+            <div class="panel rethink-sans-bodyfont">
+              <p>SpringShare LibGuides, Adobe Illustrator, Loom, Google Slides, CSS, writing for the web</p>
             </div>
           </div>
         </div>
@@ -66,13 +66,12 @@
             <h2 class="rethink-sans-subhead">Access this Project:</h2>
           </div>
           <div class="access-project-links rethink-sans-bodyfont">
-            <p><a>Project link</a></p>
-            <a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">See the Project</a>
+            <p><a href="https://prattlis.libguides.com/c.php?g=1379726&p=10201673">Explore the LibGuide!</a></p>
+            <!-- <a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">See the Project</a> -->
           </div>  
         </div>
       </div>
     </div>
-
     <footer>
       <p class="attribution">© Madeleine Casey 2025.  All graphics created by Madeleine Casey.</p>
     </footer>
