--- a/baaaad.html
+++ b/baaaad.html
@@ -31,8 +31,9 @@
          <div class="portfolio-page-content">
             <div class="portfolio-page-box">
              <div class="portfolio-page-embed">
-                <object data="Lorum Ipsum Test PDF.pdf#page=1" type="application/pdf" width="100%" height="100%">
-                  <iframe src="Lorum Ipsum Test PDF.pdf#page=1" width="100%" height="100%" style="border: none;">
+                <p class="rethink-sans-subhead">Browse the project website!<br>(note, some functionality may not work- so it is suggested to try the link in the below instead)</p>
+                <object data="https://studentwork.prattsi.org/bookarts/" width="100%" height="500">
+                  <iframe src="https://studentwork.prattsi.org/bookarts/" width="100%" height="100%" style="border: none;">
                    This browser does not support PDFs. Please download the PDF to view it: 
                   <a href="Lorum Ipsum Test PDF.pdf">Download PDF</a>
                    </iframe>
@@ -42,19 +43,19 @@
             <div class="portfolio-page-box">
               <!-- Should I make this a table? Or should I do headers and then content? Or an accordion?? -->
               <button class="accordion">Project Description</button>
-              <div class="panel">
+              <div class="panel rethink-sans-bodyfont">
                 <p>Lorem Ipsum...</p>
               </div>
               <button class="accordion">Methods</button>
-              <div class="panel">
+              <div class="panel rethink-sans-bodyfont">
                 <p>Lorem Ipsum...</p>
               </div>
               <button class="accordion">My Role</button>
-              <div class="panel">
+              <div class="panel rethink-sans-bodyfont">
                 <p>Lorem Ipsum...</p>
               </div>
               <button class="accordion">Skills Highlighted</button>
-              <div class="panel">
+              <div class="panel rethink-sans-bodyfont">
                 <p>Lorem Ipsum...</p>
               </div>
             </div>
@@ -66,8 +67,10 @@
               <h2 class="rethink-sans-subhead">Access this Project:</h2>
             </div>
             <div class="access-project-links rethink-sans-bodyfont">
-              <p><a>Project link</a></p>
-              <a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">See the Project</a>
+              <p><a href="https://studentwork.prattsi.org/bookarts/">Project Website</a></p>
+              <p><a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">Usability Testing Session Guidelines</a></p>
+              <p><a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">Data Documentation Plan Written for the Project</a></p>
+              <p><a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">Blog Post Sample Questions</a></p>
             </div>  
           </div>
         </div>
