--- a/validator.html
+++ b/validator.html
@@ -42,19 +42,19 @@
             <div class="portfolio-page-box">
               <!-- Should I make this a table? Or should I do headers and then content? Or an accordion?? -->
               <button class="accordion">Project Description</button>
-              <div class="panel">
+              <div class="panel rethink-sans-bodyfont">
                 <p>Lorem Ipsum...</p>
               </div>
               <button class="accordion">Methods</button>
-              <div class="panel">
+              <div class="panel rethink-sans-bodyfont">
                 <p>Lorem Ipsum...</p>
               </div>
               <button class="accordion">My Role</button>
-              <div class="panel">
+              <div class="panel rethink-sans-bodyfont">
                 <p>Lorem Ipsum...</p>
               </div>
               <button class="accordion">Skills Highlighted</button>
-              <div class="panel">
+              <div class="panel rethink-sans-bodyfont">
                 <p>Lorem Ipsum...</p>
               </div>
             </div>
@@ -66,8 +66,8 @@
               <h2 class="rethink-sans-subhead">Access this Project:</h2>
             </div>
             <div class="access-project-links rethink-sans-bodyfont">
-              <p><a>Project link</a></p>
-              <a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">See the Project</a>
+              <p><a href="https://colab.research.google.com/drive/1J88jqKmxqtc3x2wLsYQ9fF3meKnfLRsS?usp=sharing">Project link</a></p>
+              <a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">CSV files (required to upload to the workbook for it to function)</a>
             </div>  
           </div>
         </div>
