--- a/collage.html
+++ b/collage.html
@@ -34,13 +34,13 @@
                 <div class="slideshow-container">
                     <div class="mySlides fade">
                       <div class="numbertext rethink-sans-subhead">1 / 3</div>
-                      <img src="libguide-thumb.svg" style="width:100%">
+                      <img src="collage-thumb.svg" style="width:100%">
                       <!-- <div class="text rethink-sans-subhead">Caption</div> -->
                     </div>
                     
                     <div class="mySlides fade">
                       <div class="numbertext rethink-sans-subhead">2 / 3</div>
-                      <img src="libguide-thumb.svg" style="width:100%">
+                      <img src="libguide-header-1000+.svg" style="width:100%">
                       <!-- <div class="text rethink-sans-subhead">Caption Two</div> -->
                     </div>
                     
