plugging in text content to portfolio pages

--- a/baaaad.html
+++ b/baaaad.html
@@ -44,19 +44,19 @@
               <!-- Should I make this a table? Or should I do headers and then content? Or an accordion?? -->
               <button class="accordion">Project Description</button>
               <div class="panel rethink-sans-bodyfont">
-                <p>Lorem Ipsum...</p>
+                <p>Books as Art, Art as Data is a digital humanities project created by a group of five students, in collaboration with the Center for Book Arts, a small New York City based cultural heritage institution.  For this project, my peers and I built and documented a series of digital humanities projects using data about the Center for Book Arts’ collections and institutional history. </p>
               </div>
               <button class="accordion">Methods</button>
               <div class="panel rethink-sans-bodyfont">
-                <p>Lorem Ipsum...</p>
+                <p>For my contribution to the project, I researched and learned how to build a website using WordPress, to house the projects produced by my peers.  I also served as a “documentarian” of the project’s methods and process, which I  accomplished both by collecting survey data throughout the semester of my peers’ progress on the project, and by conducting long-form interviews with my peers about challenges they faced in the project. I transcribed, and edited these interviews, which I used to write blog posts about the process of the project, with the aim of supporting the replicability of the project, in order to offer guidelines for other students or practitioners new to digital humanities as a field of practice. Throughout the project, I worked to incorporate audience feedback into the project’s construction and design, by soliciting informal and formal feedback through a survey, interactive presentation, and usability testing. Both the feedback collection and iterative development of the project built upon previous experience I developed in the program conducting usability testing. </p>
               </div>
               <button class="accordion">My Role</button>
               <div class="panel rethink-sans-bodyfont">
-                <p>Lorem Ipsum...</p>
+                <p>For this project, I built and designed the project website using WordPress, created a site index to facilitate multiple avenues of user discovery across the project, and researched and wrote a series of blog posts documenting the process of the project.  I also collected data through regular surveys of my peers across the course of the project which I used to create a zine documenting our project’s process.  Finally, I developed a series of questions and categories for user feedback about the project’s process which were used for analysis of our work and modifications. As part of the project, I also independently conducted an audit of the website’s compliance to WCAG guidelines, to ensure the website conformed to basic accessibility standards, such as appropriate color contrast. I also developed guidelines for dataset documentation for my group to apply to the datasets they worked on to ensure the changes and work they completed was well-documented.</p>
               </div>
               <button class="accordion">Skills Highlighted</button>
               <div class="panel rethink-sans-bodyfont">
-                <p>Lorem Ipsum...</p>
+                <p>WordPress, Adobe Illustrator, Website Hosting, Zine Creation, OSF, Writing for the Web, Usability Testing, Digital Accessibility (WCAG guidelines)</p>
               </div>
             </div>
           </div>
