--- a/lib-diversity.html
+++ b/lib-diversity.html
@@ -73,19 +73,19 @@
               <!-- Should I make this a table? Or should I do headers and then content? Or an accordion?? -->
               <button class="accordion">Project Description</button>
               <div class="panel rethink-sans-bodyfont">
-                <p>Lorem Ipsum...</p>
+                <p>For this project, I modified and analyzed a series of data visualizations which I created across a semester of work, related to professional diversity within librarianship as a field.  The project sought to explore the research question, “What is the demographic breakdown of librarianship as a field, and what potential underlying causes may contribute to the overrepresentation of white women in librarianship (relative to the demographic breakdown of the population of the United States?”, using a collection of graphs, maps, and network visualizations.</p>
               </div>
               <button class="accordion">Methods</button>
               <div class="panel rethink-sans-bodyfont">
-                <p>Lorem Ipsum...</p>
+                <p>For the project I used several data sources, and practiced both cleaning of an existing dataset, and creation of a new dataset from an information source. For example, I created several charts using data from the Bureau of Labor Statistics, about the demographic breakdown, and payscale of librarianship compared to other professions. I also built a dataset of ALA accredited library programs using data from the ALA, which I used to create a map of career outcomes relative to program locations.  Finally, I also built a dataset of subject terms from In the Library with the Lead Pipe articles from 2013-2024, which I used to conduct subject analysis in a series of network visualizations, to explore the frequency with which articles mentioned topics related to equity and labor from 2013-202. For this project, I utilized the data visualization tools Tableau and Gephi, and utilized  Open Refine, Google Sheets, and R scripts to analyze, organize and clean the 3 datasets I used for the project. </p>
               </div>
               <button class="accordion">My Role</button>
               <div class="panel rethink-sans-bodyfont">
-                <p>Lorem Ipsum...</p>
+                <p>For this project, I independently gathered the data I used, conducted user testing on the charts I created, designed and produced the data visualizations, and wrote the final report I produced about the project.</p>
               </div>
               <button class="accordion">Skills Highlighted</button>
               <div class="panel rethink-sans-bodyfont">
-                <p>Lorem Ipsum...</p>
+                <p>OpenRefine, R, Gephi, Tableau, Research</p>
               </div>
             </div>
           </div>
