--- a/validator.html
+++ b/validator.html
@@ -31,8 +31,9 @@
          <div class="portfolio-page-content">
             <div class="portfolio-page-box">
              <div class="portfolio-page-embed">
-                <object data="Lorum Ipsum Test PDF.pdf#page=1" type="application/pdf" width="100%" height="100%">
-                  <iframe src="Lorum Ipsum Test PDF.pdf#page=1" width="100%" height="100%" style="border: none;">
+                <p class="rethink-sans-subhead">Output of the Validator Using the sample metadata<br>(as a txt file)</p>
+                <object data="metadata_flags.txt" type="application/pdf" width="100%" height="500">
+                  <iframe src="metadata_flags.txt" width="100%" height="100%" style="border: none;">
                    This browser does not support PDFs. Please download the PDF to view it: 
                   <a href="Lorum Ipsum Test PDF.pdf">Download PDF</a>
                    </iframe>
@@ -43,19 +44,19 @@
               <!-- Should I make this a table? Or should I do headers and then content? Or an accordion?? -->
               <button class="accordion">Project Description</button>
               <div class="panel rethink-sans-bodyfont">
-                <p>Lorem Ipsum...</p>
+                <p>The project built upon python programming skills I developed across a semester, in the course Programming for Cultural Heritage, and incorporated work I completed concurrently in another class, Metadata Design. In Metadata Design, alongside another team member, I developed a metadata application profile, which included cataloging guidelines, a domain model, an element set, and an entry mechanism, for a collection of oral histories held at NYU.  As part of this project, our guidelines and entry mechanism were tested by a group of our peers.  In programming for cultural heritage, I wrote a metadata validator, through which I tested the quality of the metadata written by our peers. The project also served as an experiment to explore the components of metadata which a machine could or could not validate.</p>
               </div>
               <button class="accordion">Methods</button>
               <div class="panel rethink-sans-bodyfont">
-                <p>Lorem Ipsum...</p>
+                <p>The final project is available as a Google colab workbook, which is designed to run a series of tests on an accompanying csv file. In practice, the guidelines and entry mechanism I developed in Metadata Design resulted in very high-quality metadata, thus I added several errors to the sample dataset in order to assess the ability of the validator to flag errors.  Throughout the project, I developed skills applying python to a practical context, built capacity working with regex, and with python libraries including pyspellchecker, and pandas.  In this project I iteratively developed portions of the script to ultimately address a complex problem, by dealing with one part of the problem at a time, thus practicing breaking down complex technological tasks into achievable components.</p>
               </div>
               <button class="accordion">My Role</button>
               <div class="panel rethink-sans-bodyfont">
-                <p>Lorem Ipsum...</p>
+                <p>I researched, wrote, and modified the python scripts for this project independently, and presented the project in class.</p>
               </div>
               <button class="accordion">Skills Highlighted</button>
               <div class="panel rethink-sans-bodyfont">
-                <p>Lorem Ipsum...</p>
+                <p>Python (libraries: pyspellchecker, pandas, re), Google CoLab, Regex, PBCore</p>
               </div>
             </div>
           </div>
