--- a/collage.html
+++ b/collage.html
@@ -73,19 +73,19 @@
               <!-- Should I make this a table? Or should I do headers and then content? Or an accordion?? -->
               <button class="accordion">Project Description</button>
               <div class="panel rethink-sans-bodyfont">
-                <p>Lorem Ipsum...</p>
+                <p>In this project, I built upon skills and information I developed in a summer Data Physicalization Course, to explore data about the most challenged books in the U.S. from 2023. In the course, I learnt about Data Physicalization as an avenue for promoting data and information literacy amongst the public by conveying information in an engaging, accessible, and tangible medium.  Throughout the project, I developed skills in conveying information through creative praxis, and in using creative design and structure as a means to redundantly express factual information.  The project resulted in a physical book, which used collage as a method to convey information about the thematic commonalities between some of the most challenged books in U.S. libraries in the year 2023.</p>
               </div>
               <button class="accordion">Methods</button>
               <div class="panel rethink-sans-bodyfont">
-                <p>Lorem Ipsum...</p>
+                <p>For this project, I scanned and ran OCR on the texts for the five most challenged books in the U.S. from 2023 (based on data from the ALA), and conducted Latent Dirichlet Allocation (topic modeling) analysis on the texts to identify common themes.  I then converted the results of the analysis to the physical collage, which used images (drawn by me in Adobe Illustrator) to represent a subsection of the concepts and themes addressed in the books.  One interesting finding of the project was the frequency with which themes related to romance and sexuality were featured in the challenged literature, which I chose to specifically highlight in the final project.  The project built upon work I conducted in a prior class, Intro to Digital Humanities, in which I explored topic modeling as a methodology, using the open source tool Voyant.</p>
               </div>
               <button class="accordion">My Role</button>
               <div class="panel rethink-sans-bodyfont">
-                <p>Lorem Ipsum...</p>
+                <p>For this project, I developed the research question, collected the data for the project, and created the collage, or  physicalization, independently.</p>
               </div>
               <button class="accordion">Skills Highlighted</button>
               <div class="panel rethink-sans-bodyfont">
-                <p>Lorem Ipsum...</p>
+                <p>Voyant (Topic Modeling), Adobe Illustrator, Data Physicalization</p>
               </div>
             </div>
           </div>
