--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-  <header>
+  <header class="resume-head-background">
     <h1 id="resume-h1">Resume</h1>
   </header>
   <div class="resume-content">
