--- a/libguide.html
+++ b/libguide.html
@@ -31,12 +31,13 @@
        <div class="portfolio-page-content">
           <div class="portfolio-page-box">
            <div class="portfolio-page-embed">
-              <object data="https://prattlis.libguides.com/c.php?g=1379726&p=10201673" width="100%" height="500">
+            <img src-"" alt="a screenshot of the homepage of a guide about queer speculative fiction">
+              <!-- <object data="https://prattlis.libguides.com/c.php?g=1379726&p=10201673" width="100%" height="500">
                 <iframe src="https://prattlis.libguides.com/c.php?g=1379726&p=10201673" width="100%" height="100%" style="border: none;">
                  This browser does not support PDFs. Please download the PDF to view it: 
                 <a href="Lorum Ipsum Test PDF.pdf">Download PDF</a>
                  </iframe>
-              </object>
+              </object> -->
             </div>
           </div>
           <div class="portfolio-page-box">
