--- a/libguide.html
+++ b/libguide.html
@@ -31,7 +31,7 @@
        <div class="portfolio-page-content">
           <div class="portfolio-page-box">
            <div class="portfolio-page-embed">
-            <img src-"" alt="a screenshot of the homepage of a guide about queer speculative fiction">
+            <img src="libguide-screenshot.png" alt="a screenshot of the homepage of a guide about queer speculative fiction" width="85%" height="600">
               <!-- <object data="https://prattlis.libguides.com/c.php?g=1379726&p=10201673" width="100%" height="500">
                 <iframe src="https://prattlis.libguides.com/c.php?g=1379726&p=10201673" width="100%" height="100%" style="border: none;">
                  This browser does not support PDFs. Please download the PDF to view it: 
@@ -67,7 +67,7 @@
             <h2 class="rethink-sans-subhead">Access this Project:</h2>
           </div>
           <div class="access-project-links rethink-sans-bodyfont">
-            <p><a href="https://prattlis.libguides.com/c.php?g=1379726&p=10201673">Explore the LibGuide!</a></p>
+            <p><br><a href="https://prattlis.libguides.com/c.php?g=1379726&p=10201673">Explore the LibGuide!</a></p>
             <!-- <a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">See the Project</a> -->
           </div>  
         </div>
