portfolio subpage styling

--- a/baaaad.html
+++ b/baaaad.html
@@ -31,9 +31,9 @@
          <div class="portfolio-page-content">
             <div class="portfolio-page-box">
              <div class="portfolio-page-embed">
-                <p class="rethink-sans-subhead">Browse the project website!<br>(note, some functionality may not work- so it is suggested to try the link in the below instead)</p>
-                <object data="https://studentwork.prattsi.org/bookarts/" width="100%" height="500">
-                  <iframe src="https://studentwork.prattsi.org/bookarts/" width="100%" height="100%" style="border: none;">
+                <p class="rethink-sans-subhead embed-caption">Browse the project website!<br>(note, some functionality may not work- so it is suggested to try the link in the below instead)</p>
+                <object data="https://studentwork.prattsi.org/bookarts/" width="90%" height="500">
+                  <iframe src="https://studentwork.prattsi.org/bookarts/" width="90%" height="100%" style="border: none;">
                    This browser does not support PDFs. Please download the PDF to view it: 
                   <a href="Lorum Ipsum Test PDF.pdf">Download PDF</a>
                    </iframe>
@@ -67,7 +67,7 @@
               <h2 class="rethink-sans-subhead">Access this Project:</h2>
             </div>
             <div class="access-project-links rethink-sans-bodyfont">
-              <p><a href="https://studentwork.prattsi.org/bookarts/">Project Website</a></p>
+              <p><br><a href="https://studentwork.prattsi.org/bookarts/">Project Website</a></p>
               <p><a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">Usability Testing Session Guidelines</a></p>
               <p><a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">Data Documentation Plan Written for the Project</a></p>
               <p><a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">Blog Post Sample Questions</a></p>
