--- a/lib-diversity.html
+++ b/lib-diversity.html
@@ -31,7 +31,7 @@
          <div class="portfolio-page-content">
             <div class="portfolio-page-box">
              <div class="portfolio-page-embed">
-                <p class="rethink-sans-subhead">To see higher quality versions of these visualizations, check out the project write up (linked below)</p>
+                <p class="rethink-sans-subhead embed-caption">To see higher quality versions of these visualizations, check out the project write up (linked below)</p>
                 <div class="slideshow-container">
                     <div class="mySlides fade">
                       <div class="numbertext rethink-sans-subhead">1 / 3</div>
