--- a/validator.html
+++ b/validator.html
@@ -31,9 +31,9 @@
          <div class="portfolio-page-content">
             <div class="portfolio-page-box">
              <div class="portfolio-page-embed">
-                <p class="rethink-sans-subhead">Output of the Validator Using the sample metadata<br>(as a txt file)</p>
-                <object data="metadata_flags.txt" type="application/pdf" width="100%" height="500">
-                  <iframe src="metadata_flags.txt" width="100%" height="100%" style="border: none;">
+                <p class="rethink-sans-subhead embed-caption">Output of the validator using the sample metadata<br>(as a txt file)</p>
+                <object data="metadata_flags.txt" type="application/pdf" width="90%" height="500">
+                  <iframe src="metadata_flags.txt" width="90%" height="100%" style="border: none;">
                    This browser does not support PDFs. Please download the PDF to view it: 
                   <a href="Lorum Ipsum Test PDF.pdf">Download PDF</a>
                    </iframe>
