--- a/baaaad.html
+++ b/baaaad.html
@@ -31,7 +31,7 @@
          <div class="portfolio-page-content">
             <div class="portfolio-page-box">
              <div class="portfolio-page-embed">
-                <p class="rethink-sans-subhead embed-caption">Browse the project website!<br>(note, some functionality may not work- so it is suggested to try the link in the below instead)</p>
+                <p class="rethink-sans-subhead">Browse the project website!<br>(note, some functionality may not work- so it is suggested to try the link in the below instead)</p>
                 <object data="https://studentwork.prattsi.org/bookarts/" width="90%" height="500">
                   <iframe src="https://studentwork.prattsi.org/bookarts/" width="90%" height="100%" style="border: none;">
                    This browser does not support PDFs. Please download the PDF to view it: 
