fixing project PDFS

--- a/collage.html
+++ b/collage.html
@@ -96,8 +96,8 @@
               <h2 class="rethink-sans-subhead">Access this Project:</h2>
             </div>
             <div class="access-project-links rethink-sans-bodyfont">
-              <p><a>Project link</a></p>
-              <a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">See the Project</a>
+              <!-- <p><a>Project link</a></p> -->
+              <p><a id="folder-download" href="files/challenged_books_collage_reflection (1).pdf" download="challenged-books-collage-reflection">Final Project Reflection</a></p>
             </div>  
           </div>
         </div>
