--- a/lib-diversity.html
+++ b/lib-diversity.html
@@ -98,7 +98,7 @@
             </div>
             <div class="access-project-links rethink-sans-bodyfont">
               <p><a href="https://studentwork.prattsi.org/infovis/visualization/exploring-demographic-homogeneity-in-librarianship-a-data-driven-approach/">Project Write Up (on Pratt blog)</a></p>
-              <a id="folder-download" href="" download="">PDF Version of the Blog Post</a>
+              <a id="folder-download" href="files/exploring-demographic-homogeneity-in-librarianship.pdf" download="demographic-homogeneity-in-librarianship-report.pdf">PDF version of the write up</a>
             </div>  
           </div>
         </div>
