--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
     </div>
     <div class="resume-sections">
     <!-- To Add to the directory- PDF file version of my resume -->
-      <a class="rethink-sans-subhead" id="resume-download" href="./directory/casey_2025_resume.pdf" download="caseyresume">Download my resume</a><br>
+      <a class="rethink-sans-subhead" id="resume-download" href="files/madeleine-casey-spring-2025-resume.pdf" download="caseyresume-sp25">Download my resume</a><br>
     <!-- <button id="home-page"><a href="index.html">Home Page</a></button> -->
     </div> 
   </div>
