adding writeen up portfolio to page

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,6 +56,13 @@
     </div>
     <a href="collage.html"><img class="project-thumbnail" src="collage-thumb.svg" alt=""></a>
   </div>
+  <div>
+    <div class="portfolio-heading">
+      <h2>PDF Portfolio (for MsLIS graduation requirement):</h2>
+    </div>
+    <a class="rethink-sans-subhead" id="portfolio-download" href="files/casey-lis-portfolio-write-ups.pdf" download="maddy-casey-mslis-pratt-grad-portfolio-sp25.pdf">Text only Portfolio</a>
+    <!-- <a href="collage.html"><img class="project-thumbnail" src="collage-thumb.svg" alt=""></a> -->
+  </div>
 </div>
 
  
