fixing the resume page

--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
         </div>  
       </nav>
     </div>
-    <div class="resume-sections">
+    <div class="resume-sections" id="resume-download-box">
     <!-- To Add to the directory- PDF file version of my resume -->
       <a class="rethink-sans-subhead" id="resume-download" href="files/madeleine-casey-spring-2025-resume.pdf" download="caseyresume-sp25">Download my resume</a><br>
     <!-- <button id="home-page"><a href="index.html">Home Page</a></button> -->
