fixing portfolio download box

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,9 @@
     <div class="portfolio-heading">
       <h2>PDF Portfolio (for MsLIS graduation requirement):</h2>
     </div>
-    <a class="rethink-sans-subhead" id="portfolio-download" href="files/casey-lis-portfolio-write-ups.pdf" download="maddy-casey-mslis-pratt-grad-portfolio-sp25.pdf">Text only Portfolio</a>
+    <div id="portfolio-download-box">
+      <a class="rethink-sans-subhead" id="portfolio-download" href="files/casey-lis-portfolio-write-ups.pdf" download="maddy-casey-mslis-pratt-grad-portfolio-sp25.pdf">Text only Portfolio</a>
+    </div>
     <!-- <a href="collage.html"><img class="project-thumbnail" src="collage-thumb.svg" alt=""></a> -->
   </div>
 </div>
