--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
     <h1 id="resume-h1">Resume</h1>
   </header>
   <div class="resume-content">
-    <div class="resume-sections">
+    <div class="resume-sections" id="resume-page-nav">
       <nav class="resume-nav">
         <div class="rethink-sans-bodyfont">
           <ul class="nav-list">
