adding an images folder 2 organize

--- a/libguide.html
+++ b/libguide.html
@@ -4,7 +4,7 @@
   	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   	<title>Maddy Casey Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="portfolio-favicon.svg">
+    <link rel="icon" type="image/x-icon" href="images/portfolio-favicon.svg">
   	<meta name="description" content=""A digital portfolio reflecting my work as a graduate student in the MsLIS program at the Pratt Institute">
     <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,7 +32,7 @@
        <div class="portfolio-page-content">
           <div class="portfolio-page-box">
            <div class="portfolio-page-embed">
-            <img src="libguide-screenshot.png" alt="a screenshot of the homepage of a guide about queer speculative fiction" width="85%" height="600">
+            <img src="images/libguide-screenshot.png" alt="a screenshot of the homepage of a guide about queer speculative fiction" width="85%" height="600">
               <!-- <object data="https://prattlis.libguides.com/c.php?g=1379726&p=10201673" width="100%" height="500">
                 <iframe src="https://prattlis.libguides.com/c.php?g=1379726&p=10201673" width="100%" height="100%" style="border: none;">
                  This browser does not support PDFs. Please download the PDF to view it: 
