--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
   	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   	<title>Maddy Casey Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="portfolio-favicon.svg">
+    <link rel="icon" type="image/x-icon" href="images/portfolio-favicon.svg">
   	<meta name="description" content=""A digital portfolio reflecting my work as a graduate student in the MsLIS program at the Pratt Institute">
     <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
           <h2>Queer Speculative Fiction LibGuide</h2>
           </a>
         </div>
-        <a href="libguide.html"><img class="project-thumbnail" src="libguide-thumb.svg" alt="a small green alien holding a progress pride flag"></a>
+        <a href="libguide.html"><img class="project-thumbnail" src="images/libguide-thumb.svg" alt="a small green alien holding a progress pride flag"></a>
     </div>
     <div>
       <div class="portfolio-heading">
@@ -31,7 +31,7 @@
         <h2>Books as Art,<br>Art as Data</h2>
         </a>
       </div>
-        <a href="baaaad.html"><img class="project-thumbnail" src="baaaad-thumb.svg" alt="An orange and brown graphic pattern"></a>
+        <a href="baaaad.html"><img class="project-thumbnail" src="images/baaaad-thumb.svg" alt="An orange and brown graphic pattern"></a>
     </div>
     <div>
       <div class="portfolio-heading">
@@ -39,7 +39,7 @@
         <h2>Python<br>Metadata Validator</h2>
         </a>
       </div>
-      <a href="validator.html"><img class="project-thumbnail" src="validator-thumb.svg" alt="a snippet of python code"></a>
+      <a href="validator.html"><img class="project-thumbnail" src="images/validator-thumb.svg" alt="a snippet of python code"></a>
   </div>
   <div>
     <div class="portfolio-heading">
@@ -47,7 +47,7 @@
       <h2>Representation in Librarianship</h2>
       </a>
     </div>
-    <a href="lib-diversity.html"><img class="project-thumbnail" src="lib-diversity-thumb.svg" alt="a grey blue and green network graph"></a>
+    <a href="lib-diversity.html"><img class="project-thumbnail" src="images/lib-diversity-thumb.svg" alt="a grey blue and green network graph"></a>
   </div>
   <div>
     <div class="portfolio-heading">
@@ -55,7 +55,7 @@
       <h2>This Book is Challeng(ing/ed)</h2>
       </a>
     </div>
-    <a href="collage.html"><img class="project-thumbnail" src="collage-thumb.svg" alt="The cover of a physical art book titled This Book is Challeng(ing/ed). It resembles the burn book."></a>
+    <a href="collage.html"><img class="project-thumbnail" src="images/collage-thumb.svg" alt="The cover of a physical art book titled This Book is Challeng(ing/ed). It resembles the burn book."></a>
   </div>
   <div>
     <div class="portfolio-heading">
