--- a/baaaad.html
+++ b/baaaad.html
@@ -4,7 +4,7 @@
   	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   	<title>Maddy Casey Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="portfolio-favicon.svg">
+    <link rel="icon" type="image/x-icon" href="images/portfolio-favicon.svg">
   	<meta name="description" content=""A digital portfolio reflecting my work as a graduate student in the MsLIS program at the Pratt Institute">
     <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
